CoapPacket with transport context